--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="_4">4</string>
     <string name="_5">5</string>
     <string name="_6">6</string>
-    <string name="x">X</string>
+    <string name="x">x</string>
     <string name="_1">1</string>
     <string name="_2">2</string>
     <string name="_3">3</string>
@@ -17,4 +17,5 @@
     <string name="clr">CLR</string>
     <string name="plus">+</string>
     <string name="equals">=</string>
+    <string name="dot">.</string>
 </resources>
